# noodle

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: atomic-commit.md  noodle-context.md  noodle-digest.md  noodle-find.md  noodle-review.md  noodle-tasks.md  noodle.md
.obsidian/: workspace.json
.obsidian/themes/Omarchy/: theme.css
docs/: completeness-assessment.md
docs/ai/: claude-models.md
docs/specs/: init.md  roadmap.md
src/noodle/: __init__.py  classifier.py  cli.py  config.py  db.py  health.py  ingress.py  router.py  surfacing.py  telegram_bot.py
src/noodle/systemd/: noodle-digest.service  noodle-digest.timer  noodle-inbox.path  noodle-inbox.service  noodle-telegram.service  noodle-weekly.service  noodle-weekly.timer
src/noodle_mcp/: __init__.py  server.py
